Update swager
